# dinotools

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-02T08-13-00-011Z.yml  page-2026-04-02T08-13-42-169Z.yml
agents/: deep_research.py  main.py  tools.py
docs/superpowers/plans/: 2026-04-02-realtime-task-progress.md
docs/superpowers/specs/: 2026-04-02-mounted-pattern-fix.md  2026-04-02-perplexity-redesign.md  2026-04-02-realtime-task-progress-design.md  2026-04-02-step-tracker-design.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: .page.tsx.swp  globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/components/: FileViewerModal.tsx  Providers.tsx  ThreadContext.tsx  ToolCard.tsx  Workspace.tsx
frontend/components/Sidebar/: HistoryList.tsx  NavItem.tsx  Sidebar.tsx
frontend/components/Thread/: AnswerBody.tsx  FollowUpInput.tsx  LinksTab.tsx  SourceBanner.tsx  StepTracker.tsx  StepsToggle.tsx  TabBar.tsx
frontend/types/: research.ts
