[project]
name = "dinotools"
version = "0.1.0"
description = "Making life easier"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "ag-ui-langgraph>=0.0.28",
    "copilotkit>=0.1.83",
    "deepagents>=0.4.8",
    "fastapi>=0.135.2",
    "langchain-core>=1.2.23",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.23",
    "uvicorn>=0.42.0",
]
